--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
+# https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
+
+# activer la coloration syntaxique
 spring.output.ansi.enabled=always
+
+server.port=8080
+
+# ACTUATOR
+
+#port used to expose actuator
+# management.server.port=9000
+ #CIDR allowed to hit actuator
+#management.server.address=127.0.0.1
+#by default, all Actuator endpoints are now placed under the /actuator path
+#management.endpoints.web.base-path=
+
+management.endpoint.health.show-details=when-authorized
+
+#Whether to enable the conditions endpoint.
+management.endpoint.conditions.enabled=true 
+
+management.endpoint.auditevents.enabled=true
+management.endpoint.beans.enabled=true
+#management.endpoint. =true
+management.endpoint.env.enabled=true
+management.endpoint.metrics.enabled=true
+# expose all endpoints:
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include= = info, health, configprops, env, mappings, threaddump, bean, loggers, autoconfig 
+
+
+# ----------------------------------------
+# DEVTOOLS PROPERTIES
+# ----------------------------------------
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
