Spring profile - prod MYSQL

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- tag::db[] -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!-- connexion pol -->
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+		</dependency>
+		<!-- end::db[] -->
+
 		<!-- tag::security[] -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
