--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,8 +20,8 @@ spring:
         
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:h2:mem:demoapp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-        username: demoapp  
+        url: jdbc:h2:mem:demo;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+        username: root  
         password:
     # H2 Web Console 
     h2:
@@ -33,3 +33,8 @@ spring:
         database-platform: org.hibernate.dialect.H2Dialect
         database: H2
         show-sql: true
+        properties:
+            hibernate.id.new_generator_mappings: true
+            hibernate.cache.use_second_level_cache: true
+            hibernate.cache.use_query_cache: false
+            hibernate.generate_statistics: true
