--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@
 management:
     endpoints:
         web:
-            base-path: /management
+            base-path: /actuator
             exposure:
                 include: ["configprops", "env", "health", "info", "threaddump", "metrics"]
     endpoint:
