--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,8 @@
 logging:
     level:
         ROOT: INFO
+        org.hibernate.SQL: DEBUG
+        com.zaxxer.hikari.HikariConfig: DEBUG
 
 server:
     port: 8080
@@ -33,8 +35,18 @@ spring:
         database-platform: org.hibernate.dialect.H2Dialect
         database: H2
         show-sql: true
+        format-sql: true
         properties:
             hibernate.id.new_generator_mappings: true
             hibernate.cache.use_second_level_cache: true
             hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: true
+            
+  # ===================================================================
+# Application specific properties
+# Add your own application properties here, see the ApplicationProperties class
+# ===================================================================
+hello:
+    prefix : hello
+    target: dev
+    
