--- a/docker/app.yml
+++ b/docker/app.yml
@@ -1,11 +1,11 @@
 version: '2'
 services:
     app:
-        image: jhipstersampleapplication
+        image: snecommerce/demo
         environment:
             - _JAVA_OPTIONS=-Xmx512m -Xms256m
             - SPRING_PROFILES_ACTIVE=prod,swagger
-            - SPRING_DATASOURCE_URL=jdbc:mysql://demo-mysql:3306/demo?useUnicode=true&characterEncoding=utf8&useSSL=false
+            - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/demo?useUnicode=true&characterEncoding=utf8&useSSL=false
         ports:
             - 8080:8080
     db:
